Add Disqus module

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <script type="text/javascript">
 
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-29666592-1']);
+    _gaq.push(['_setAccount', '{{ site.ga_id }}']);
     _gaq.push(['_trackPageview']);
 
     (function() {
